# computacion-nube

./: README.md
openmp-task/: CMakeLists.txt  conanfile.txt
openmp-task/include/: random.h
openmp-task/src/: hello_world.cpp  linked.cpp  mandel.cpp  pi.cpp  pi_mc.cpp  pi_parallelfor.cpp  pi_roundrobin.cpp  prod_cons.cpp  random.cpp  sum_arrays.cpp
personal-web/: Dockerfile
personal-web/public_html/: index.html
